compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__non_module_level_function_with_a_name.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1665
expression: "\npub fn main() {\n  fn my() { 1 }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  fn my() { 1 }
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:6
  │
3 │   fn my() { 1 }
  │      ^^ I was not expecting this

Found a name, expected one of: 
- `(`
Hint: Only module-level functions can be named.
